fix for dark mode

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -434,7 +434,7 @@ a {
         border: 1px solid white;
     }
     .hamburger-icon {
-        color: white;
+        color: #ffffff;
     }
     ::-webkit-scrollbar-thumb {
         background: white;
